# STM32-SHT31

./: .gitignore  Cargo.toml  README.md
src/: function.rs  main.rs  ssd1306.rs
